# Aws-IoT-CLI

./: CMakeLists.txt  README.md  devicenames.json  policy.json
src/: AwsIoTCLI.cpp  AwsIoTCLI.h  main.cpp
